# icd

./: 02-EDA.ipynb  03-ComparingDistributions.ipynb  04-EDA-Classification.ipynb  05-Classifier.ipynb  06-Regression.ipynb  07-linear-models.ipynb  README  pyproject.toml
assignments/: assignment1.ipynb
data/: canada_usa_cities.csv  cereal.csv  quiz2-grade-toy-classification.csv  scores.csv  united.csv
hw/: hw01.ipynb
utils/: plotting_functions.py  utils.py
